@@ -7,6 +7,7 @@ PHP                                                                        NEWS
   elmerot dot se)
 - Fixed bug #49910 (no support for ././@LongLink for long filenames in phar
   tar support). (Greg)
+- Fixed bug #49098 (mysqli segfault on error) (Rasmus)
 
 03 Nov 2009, PHP 5.3.1 RC3
 - Added "max_file_uploads" INI directive, which can be set to limit the
